# diffmatchpatch

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: speedtest.rs
examples/: blocks.rs  demo.rs
src/: chars.rs  lib.rs  match.rs  patch.rs  prelude.rs
tests/: demo.rs  diff.rs  match.rs  patch.rs  test.rs
