[package]
name = "diffmatchpatch"
publish = true
edition = "2021"
version = "0.0.1"
authors = ["Andelf <andelf@gmail.com>"]
description = "Rewrite of diff-match-patch in Rust"
homepage = "https://github.com/andelf/dmp"
repository = "https://github.com/andelf/dmp"
keywords = ["dmp", "diff", "diff-match-patch"]
categories = ["algorithms", "text-editors", "text-processing"]
license = "MIT"

[dependencies]
percent-encoding = "2.2.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "speedtest"
harness = false
