[package]
name = "diffmatchpatch"
publish = true
edition = "2021"
version = "0.0.4"
authors = ["Andelf <andelf@gmail.com>"]
description = "Rewrite of diff-match-patch in Rust"
homepage = "https://github.com/andelf/diffmatchpatch"
repository = "https://github.com/andelf/diffmatchpatch"
keywords = ["dmp", "diff", "diff-match-patch"]
categories = ["algorithms", "text-editors", "text-processing"]
license = "MIT/Apache-2.0"

[dependencies]
percent-encoding = "2.2.0"

[dev-dependencies]
criterion = "0.4.0"
regex = "1"
#diff_match_patch = "0.1.1"
#dissimilar = { path = "../dissimilar" }
#dmp = "0.1.2"

[[bench]]
name = "speedtest"
harness = false
